// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article component renders correctly 1`] = `
<div>
  <article
    class="article"
  >
    <h1
      class="headline"
    >
      test-title
    </h1>
    <div
      class="authorList"
    >
      Article Authors
      <ul>
        <li>
          <a
            aria-label="test-user1 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user1"
            rel="noopener noreferrer"
            style="margin-left: 0px;"
            target="_blank"
          >
            <img
              alt=""
              src="https://github.com/test-user1.png?size=60"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="test-user2 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              src="https://github.com/test-user2.png?size=60"
            />
          </a>
        </li>
      </ul>
    </div>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
    <div
      class="edit"
    >
      <a
        href="https://github.com/nodejs/nodejs.dev/edit/main/content/learn/test-path"
      >
        <span>
          Edit this page on GitHub
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil "
          data-icon="pencil"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.7 220.3l-11.3 11.3-22.6 22.6-205 205c-6.6 6.6-14.8 11.5-23.8 14.1L30.8 511c-8.4 2.5-17.5 .2-23.7-6.1S-1.5 489.7 1 481.2L38.7 353.1c2.6-9 7.5-17.2 14.1-23.8l205-205 22.6-22.6 11.3-11.3 33.9 33.9 62.1 62.1 33.9 33.9zM96 353.9l-9.3 9.3c-.9 .9-1.6 2.1-2 3.4l-25.3 86 86-25.3c1.3-.4 2.5-1.1 3.4-2l9.3-9.3H112c-8.8 0-16-7.2-16-16V353.9zM453.3 19.3l39.4 39.4c25 25 25 65.5 0 90.5l-14.5 14.5-22.6 22.6-11.3 11.3-33.9-33.9-62.1-62.1L314.3 67.7l11.3-11.3 22.6-22.6 14.5-14.5c25-25 65.5-25 90.5 0z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      class="pagination"
    >
      <li>
        <a
          href="test-slug"
          rel="prev"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-left "
            data-icon="angles-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-right: 5px;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
              fill="currentColor"
            />
          </svg>
          Prev
        </a>
      </li>
      <li>
        <a
          href="test-slug"
          rel="next"
        >
          Next
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-right "
            data-icon="angles-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-left: 5px;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ul>
  </article>
</div>
`;

exports[`Article component renders correctly in blog mode 1`] = `
<div>
  <article
    class="article"
  >
    <h1
      class="headline"
    >
      test-title
    </h1>
    <h5
      class="list"
    >
      date string from test
       by
       
      <span>
        test-user
      </span>
    </h5>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
  </article>
</div>
`;

exports[`Article component renders correctly in case body ref is null 1`] = `
<div>
  <article
    class="article"
  >
    <h1
      class="headline"
    >
      test-title
    </h1>
    <div
      class="authorList"
    >
      Article Authors
      <ul>
        <li>
          <a
            aria-label="test-user1 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user1"
            rel="noopener noreferrer"
            style="margin-left: 0px;"
            target="_blank"
          >
            <img
              alt=""
              src="https://github.com/test-user1.png?size=60"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="test-user2 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              src="https://github.com/test-user2.png?size=60"
            />
          </a>
        </li>
      </ul>
    </div>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
    <div
      class="edit"
    >
      <a
        href="https://github.com/nodejs/nodejs.dev/edit/main/content/learn/test-path"
      >
        <span>
          Edit this page on GitHub
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil "
          data-icon="pencil"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.7 220.3l-11.3 11.3-22.6 22.6-205 205c-6.6 6.6-14.8 11.5-23.8 14.1L30.8 511c-8.4 2.5-17.5 .2-23.7-6.1S-1.5 489.7 1 481.2L38.7 353.1c2.6-9 7.5-17.2 14.1-23.8l205-205 22.6-22.6 11.3-11.3 33.9 33.9 62.1 62.1 33.9 33.9zM96 353.9l-9.3 9.3c-.9 .9-1.6 2.1-2 3.4l-25.3 86 86-25.3c1.3-.4 2.5-1.1 3.4-2l9.3-9.3H112c-8.8 0-16-7.2-16-16V353.9zM453.3 19.3l39.4 39.4c25 25 25 65.5 0 90.5l-14.5 14.5-22.6 22.6-11.3 11.3-33.9-33.9-62.1-62.1L314.3 67.7l11.3-11.3 22.6-22.6 14.5-14.5c25-25 65.5-25 90.5 0z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      class="pagination"
    >
      <li>
        <a
          href="test-slug"
          rel="prev"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-left "
            data-icon="angles-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-right: 5px;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
              fill="currentColor"
            />
          </svg>
          Prev
        </a>
      </li>
      <li>
        <a
          href="test-slug"
          rel="next"
        >
          Next
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-right "
            data-icon="angles-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-left: 5px;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ul>
  </article>
</div>
`;

exports[`Article component should accept and render child components 1`] = `
<div>
  <article
    class="article"
  >
    <h1
      class="headline"
    >
      test-title
    </h1>
    <div
      class="authorList"
    >
      Article Authors
      <ul>
        <li>
          <a
            aria-label="test-user1 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user1"
            rel="noopener noreferrer"
            style="margin-left: 0px;"
            target="_blank"
          >
            <img
              alt=""
              src="https://github.com/test-user1.png?size=60"
            />
          </a>
        </li>
        <li>
          <a
            aria-label="test-user2 Github - opens in new tab"
            class="link"
            href="https://github.com/test-user2"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              src="https://github.com/test-user2.png?size=60"
            />
          </a>
        </li>
      </ul>
    </div>
    <details
      class="tableOfContents"
    >
      <summary>
        <strong>
          Table of Contents
        </strong>
      </summary>
      <ul>
        <li>
          <a
            href="#mock-title"
          >
            mock-title
          </a>
        </li>
        <li>
          <a
            href="#mock-title-2"
          >
            mock-title-2
          </a>
        </li>
      </ul>
    </details>
    <div>
      <p>
        Node.js can be installed in different ways. This post highlights the most common and convenient ones.
      </p>
      <p>
        Official packages for all the major platforms are available at 
        <a>
          https://nodejs.dev/download/
        </a>
        .
      </p>
      <p>
        One very convenient way to install Node.js is through a package manager. In this case, every operating system has its own.
      </p>
      <p>
        Other package managers for MacOS, Linux, and Windows are listed in 
        <a>
          https://nodejs.dev/download/package-manager/
        </a>
      </p>
      <p>
        <code
          class="code"
        >
          nvm
        </code>
         is a popular way to run Node.js. It allows you to easily switch the Node.js version, and install new versions to try and easily rollback if something breaks, for example.
      </p>
      <p>
        It is also very useful to test your code with old Node.js versions.
      </p>
      <p>
        See 
        <a>
          https://github.com/nvm-sh/nvm
        </a>
         for more information about this option.
      </p>
      <p>
        In any case, when Node.js is installed you'll have access to the 
        <code
          class="code"
        >
          node
        </code>
         executable program in the command line.
      </p>
    </div>
    <div>
      <div>
        test child JSX
      </div>
    </div>
    <div
      class="edit"
    >
      <a
        href="https://github.com/nodejs/nodejs.dev/edit/main/content/learn/test-path"
      >
        <span>
          Edit this page on GitHub
        </span>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-pencil "
          data-icon="pencil"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.7 220.3l-11.3 11.3-22.6 22.6-205 205c-6.6 6.6-14.8 11.5-23.8 14.1L30.8 511c-8.4 2.5-17.5 .2-23.7-6.1S-1.5 489.7 1 481.2L38.7 353.1c2.6-9 7.5-17.2 14.1-23.8l205-205 22.6-22.6 11.3-11.3 33.9 33.9 62.1 62.1 33.9 33.9zM96 353.9l-9.3 9.3c-.9 .9-1.6 2.1-2 3.4l-25.3 86 86-25.3c1.3-.4 2.5-1.1 3.4-2l9.3-9.3H112c-8.8 0-16-7.2-16-16V353.9zM453.3 19.3l39.4 39.4c25 25 25 65.5 0 90.5l-14.5 14.5-22.6 22.6-11.3 11.3-33.9-33.9-62.1-62.1L314.3 67.7l11.3-11.3 22.6-22.6 14.5-14.5c25-25 65.5-25 90.5 0z"
            fill="currentColor"
          />
        </svg>
      </a>
    </div>
    <ul
      class="pagination"
    >
      <li>
        <a
          href="test-slug"
          rel="prev"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-left "
            data-icon="angles-left"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-right: 5px;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160zm352-160l-160 160c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L301.3 256 438.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0z"
              fill="currentColor"
            />
          </svg>
          Prev
        </a>
      </li>
      <li>
        <a
          href="test-slug"
          rel="next"
        >
          Next
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angles-right "
            data-icon="angles-right"
            data-prefix="fas"
            focusable="false"
            role="img"
            style="margin-left: 5px;"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </a>
      </li>
    </ul>
  </article>
</div>
`;
